UPD: report answers

--- a/lab_02/docs/content.tex
+++ b/lab_02/docs/content.tex
@@ -181,7 +181,7 @@ $q_4 = h_n \varphi(x_n + h_n, y_n + k_3, z_n + q_3)$
 
 \subsection*{1. Какие способы тестирования программы, кроме указанного в п. 2, можете предложить ещё?}\\
 
-Мы можем влиять на цепь главным образом за счет добавления/удаления объектов, обладающих сопротивлением (лампа, резистор): если $R_{k}$ мало, то возникнут затухающие колебания, если велико $R_{k}$ --- апериодическое затухание.\\
+В цепи мы можем влиять на 3 параметра (ёмкость, индуктивность, сопротивление), при чем влияние каждого параметра по отдельности мы рассмотрели в п.2. При этом особый интерес представляет изменение сопротивления (потому что изменение ёмкости и индуктивности по большей мере влияют на изменение длительности импульса (так, при нулевом сопротивлении, график всегда будет представлен синусоидой, а изменение параметров будет влиять только на значение ее экстремумов и период)) путем добавления/удаления/изменения объектов, обладающих сопротивлением (лампа, резистор), при этом: если $R_{k}$ мало, то возникнут затухающие колебания, если велико $R_{k}$ --- апериодическое затухание.\\
 
 \subsection*{2. Получите систему разностных уравнений для решения сформулированной задачи неявным методом трапеций. Опишите  алгоритм реализации полученных уравнений.}
 
