FIX: report and graphics

--- a/lab_03/docs/content.tex
+++ b/lab_03/docs/content.tex
@@ -25,12 +25,12 @@
 Функции $\lambda(T)$ и $k(T)$ заданы таблицей.\\
 
 Заданы начальные параметры:\\
-\indent $n_p$ = 1.4 - коэффициент преломления\\
-\indent $l$ = 0.2 см - толщина слоя\\
-\indent $T_{0}$ = 300К - температура окружающей среды\\
-\indent $\sigma$ = 5.668 $\cdot 10^{-12}$ Вт / ($cm^2 \cdot K^4$) - постоянная Стефана - Больцмана\\
-\indent $F_{0}$ = 100 Вт / $cm^2$ - поток тепла\\
-\indent $\alpha$ = 0.05 Вт / ($cm^2 \cdot K$) - коэффициент теплоотдачи\\
+\indent $n_p = 1.4$ - коэффициент преломления\\
+\indent $l = 0.2 \text{см}$ - толщина слоя\\
+\indent $T_{0} = 300K$ - температура окружающей среды\\
+\indent $\sigma = 5.668 \cdot 10^{-12} \frac{\text{Вт}}{\text{см}^2 \cdot K^4}$ - постоянная Стефана - Больцмана\\
+\indent $F_{0} = 100 \frac{\text{Вт}}{\text{см}^2}$ - поток тепла\\
+\indent $\alpha = 0.05 \frac{\text{Вт}}{\text{см}^2 \cdot K}$ - коэффициент теплоотдачи\\
 
 Выход из итераций организовать по температуре и по балансу энергии:
 
@@ -85,8 +85,8 @@ class Params:
 params = Params()
 
 interpolate = lambda x_pts, y_pts, order=1: InterpolatedUnivariateSpline(x_pts, y_pts, k=order)
-p = lambda k_t, t, n: 4 * params.Np * params.Np * params.sigma * k_t(t[n]) * pow(t[n], 3)
-f = lambda k_t, t, n: 4 * params.Np * params.Np + params.sigma * k_t(t[n]) * pow(params.T0, 4)
+p = lambda k_t, t, n: 0
+f = lambda k_t, t, n: 4 * params.Np * params.Np + params.sigma * k_t(t[n]) * (pow(t, 4) - pow(params.T0, 4))
 
 x_right = lambda l_t, t, n: (l_t(t[n]) + l_t(t[n + 1])) / 2
 x_left = lambda l_t, t, n: (l_t(t[n]) + l_t(t[n - 1])) / 2
@@ -183,27 +183,47 @@ def start():
 
 \clearpage
 
-\subsection{График зависимости температуры $T(x)$ координаты $x$ при заданных выше параметрах.}
+\subsection{График зависимости температуры $T(x)$ от координаты $x$ при заданных выше параметрах. Выяснить, как сильно зависят результаты расчета $T(x)$ и необходимое для этого количество итераций от начального распределения температуры и шага сетки}
 
-\imgw{150mm}{1}{График зависимости температуры $T(x)$ координаты $x$ при заданных выше параметрах.}
+\imgw{150mm}{1}{График зависимости температуры $T(x)$ от координаты $x$ при заданных в теоретической части параметрах.}
+
+Количество итераций -- 23.
+
+Изменим следующие параметры:
+
+\indent $n_p = 7$\\
+\indent $F_0 = 500$\\
+
+За 16 итераций получен следующий результат:
+
+\imgw{150mm}{2}{График при $F_0 = 500$ и $n_p = 7$.}
+
+При увеличении $F_0$ кривые становятся более выпуклые.
 
 \clearpage
 
-\subsection{График зависимости $T(x)$ при $F_{0} = -10 \frac{Bт}{cm^2}$}
+\subsection{График зависимости $T(x)$ при $F_{0} = -10 \frac{\text{Вт}}{\text{см}^2}$}
 
-\imgw{150mm}{2}{График зависимости $T(x)$ при $F_{0} = -10 \frac{Bт}{cm^2}$}
+\imgw{150mm}{3}{График зависимости $T(x)$ при $F_{0} = -10 \frac{\text{Вт}}{\text{см}^2}$}
 
 \clearpage
 
 \subsection{График зависимости $T(x)$ при увеличенных значениях $\alpha$ (например, в 3 раза). Сравнить с п. 2.}
 
-\imgw{150mm}{3}{График зависимости $T(x)$ при увеличенных значениях $\alpha$ (например, в 3 раза). (график из п. 2 - фиолетовый)}
+\imgw{150mm}{4}{График зависимости $T(x)$ (оранжевая кривая -- при увеличенном в 3 раза параметре $\alpha$)}
 
 \clearpage
 
-\subsection{График зависимости $T(x)$ при $F_{0} = 0$.}
+Для параметров из п.2:
 
-\imgw{150mm}{4}{График зависимости $T(x)$ при $F_{0} = 0$.}
+\imgw{150mm}{5}{График зависимости $T(x)$  (оранжевая кривая -- при увеличенном в 3 раза параметре $\alpha$)}
+
+\clearpage
+
+\subsection{График зависимости $T(x)$ при $F_{0} = 0$}
+
+\imgw{150mm}{6}{График зависимости $T(x)$ при $F_{0} = 0$}
+
 
 \subsection{Для указанного в задании исходного набора параметров привести данные по балансу энергии.}\\
 
